Yet another attempt to fix double scrollbar issue.
html { overflow-x: initial !important; }
From https://stackoverflow.com/questions/9866220/why-are-two-vertical-scrollbars-showing

--- a/assets/css/dark_reader.css
+++ b/assets/css/dark_reader.css
@@ -1132,6 +1132,7 @@ form {
   border-radius: 8px;
   font-size: 20px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 
@@ -1144,3 +1145,6 @@ form {
 }
 
 .matchedKeys { background-color: #265670; font-style: italic; }
+
+/* Hopefully this fixes the double scrollbar issue */
+html { overflow-x: initial !important; }
